# ios-metadata-generator

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  gruntfile.js  package.json
src/: CMakeLists.txt  CustomFileSystem.cpp  CustomFileSystem.h  ModuleDiscovery.cpp  ModuleDiscovery.h  RemoveUnsupportedSyntaxAction.cpp  RemoveUnsupportedSyntaxAction.h  main.cpp
src/Binary/: binaryHashtable.cpp  binaryHashtable.h  binaryOperation.h  binaryReader.cpp  binaryReader.h  binarySerializer.cpp  binarySerializer.h  binarySerializerPrivate.h  binaryStructures.cpp  binaryStructures.h  binaryTypeEncodingSerializer.cpp  binaryTypeEncodingSerializer.h  binaryWriter.cpp  binaryWriter.h  metaFile.cpp  metaFile.h
src/HeadersParser/: Parser.cpp  Parser.h  ParserSettings.h
src/Libclang/: Constructors.xml  DocumentationManager.cs  Libclang.csproj  Program.cs  Statistics.cs
src/Libclang.Core/: ClassDiagram.cd  Libclang.Core.csproj  TypeEncoding.cs  TypeEncodingTransfomation.cs
src/Libclang.Core/Ast/: BaseClass.cs  BaseDeclaration.cs  BaseRecordDeclaration.cs  CategoryDeclaration.cs  DocumentDeclaration.cs  EnumDeclaration.cs  EnumMemberDeclaration.cs  FieldDeclaration.cs  FunctionDeclaration.cs  IDeclaration.cs  InterfaceDeclaration.cs  MethodDeclaration.cs  ParameterDeclaration.cs  PropertyDeclaration.cs  ProtocolDeclaration.cs  StructDeclaration.cs  TypedefDeclaration.cs  UnionDeclaration.cs  UnresolvedDeclaration.cs  VarDeclaration.cs
src/Libclang.Core/Common/: DeclarationsPreprocessor.cs  PlatformAvailability.cs  Version.cs
src/Libclang.Core/Generator/: BaseTNSBridgeWriter.cs  BaseWriter.cs  DeclarationVisitor.cs  Extensions.cs  Formatter.cs  IFormatter.cs  JavascriptWriter.cs  MethodCallLoggerGenerator.cs  TNSBridgeCategoriesWriter.cs  TNSBridgeEnumWriter.cs  TNSBridgeFunctionWriter.cs  TNSBridgeInterfacesWriter.cs  TNSBridgeMetadataWriter.cs  TNSBridgeProtocolsWriter.cs  TNSBridgeStaticWriter.cs  TNSBridgeStructWriter.cs
src/Libclang.Core/Meta/: BaseClassMeta.cs  CategoryMeta.cs  EnumFieldMeta.cs  EnumMeta.cs  FunctionMeta.cs  InterfaceMeta.cs  MemberMeta.cs  Meta.cs  MethodMeta.cs  ParameterMeta.cs  PropertyMeta.cs  ProtocolMeta.cs  RecordFieldMeta.cs  RecordMeta.cs  StructMeta.cs  UnionMeta.cs  VarMeta.cs
src/Libclang.Core/Parser/: FrameworkParser.Context.cs  FrameworkParser.cs  XElementExtensions.cs
src/Libclang.Core/Types/: ClassType.cs  ComplexType.cs  ConstantArrayType.cs  DeclarationReferenceType.cs  Extensions.cs  FunctionPointerType.cs  IdType.cs  IncompleteArrayType.cs  InstanceType.cs  PointerType.cs  PrimitiveType.cs  PrimitiveTypeType.cs  ProtocolType.cs  SelectorType.cs  TypeDefinition.cs  VaListType.cs
src/Libclang.DocsetParser/: DocsetParser.cs  Libclang.DocsetParser.csproj
src/Libclang.DocsetParser/Properties/: AssemblyInfo.cs
src/Libclang.Tests/: FrameworkParserTests.cs  Libclang.Tests.csproj  LibclangHelper.cs
src/Libclang.Tests/C/: EnumTests.cs  FunctionTests.cs  StructTests.cs  TypedefTests.cs  UnionTests.cs  VariableTests.cs
src/Libclang.Tests/Objective-C/: BlockTests.cs  CategoryTests.cs  ClassTests.cs  ProtocolTests.cs
src/Libclang/Mono.Options/: Options.cs
src/Meta/: CreationException.h  DeclarationConverterVisitor.cpp  DeclarationConverterVisitor.h  Identifier.h  IdentifierFactory.cpp  IdentifierFactory.h  IdentifierGenerator.cpp  IdentifierGenerator.h  JsNameGenerator.cpp  JsNameGenerator.h  KnownBridgedTypes.h  MetaEntities.cpp  MetaEntities.h  MetaFactory.cpp  MetaFactory.h  MetaVisitor.h  TypeEncodingEntities.cpp  TypeEncodingEntities.h  TypeEncodingFactory.cpp  TypeEncodingFactory.h  TypeEntities.cpp  TypeEntities.h  TypeFactory.cpp  TypeFactory.h  TypeVisitor.h  Utils.cpp  Utils.h
src/Meta/Filters/: HandleExceptionalMetasFilter.cpp  HandleExceptionalMetasFilter.h  HandleMethodsAndPropertiesWithSameNameFilter.cpp  HandleMethodsAndPropertiesWithSameNameFilter.h  MergeCategoriesFilter.cpp  ModulesBlacklist.h  RemoveDuplicateMembersFilter.cpp  RemoveDuplicateMembersFilter.h  ResolveGlobalNamesCollisionsFilter.cpp  ResolveGlobalNamesCollisionsFilter.h
src/TypeScript/: DefinitionWriter.cpp  DefinitionWriter.h  DocSetManager.cpp
src/TypeScript.Builder/: SourceTrackingDocumentationProvider.cs  TypeScriptFactory.TypeTransformation.cs  TypeScriptFactory.cs
src/TypeScript.Builder/Properties/: AssemblyInfo.cs
src/TypeScript.Declarations/: CollectionExtensions.cs  DeclarationWriter.cs  GlobalSuppressions.cs
src/TypeScript.Declarations/Model/: ConstructSignature.cs  DeclarationVisitor.cs  FunctionType.cs  ObjectType.cs  Parameter.cs  PrimitiveTypes.cs  TypeScriptObject.cs
src/TypeScript.Declarations/Writers/: DeclarationWriter.DeclarationVisitor.cs  DeclarationWriter.Tokens.cs  IDeclarationWriter.cs  IIndentWriter.cs  Indent.cs  TypeWriter.Tokens.cs  TypeWriter.TypeVisitor.cs
src/Utils/: StringUtils.h  fileStream.cpp  fileStream.h  memoryStream.cpp  memoryStream.h  serializer.h  stream.h
src/Yaml/: MetaYamlTraits.cpp  MetaYamlTraits.h  YamlSerializer.cpp  YamlSerializer.h
src/generator/: Libclang.sln  MetadataGenerator.sln
src/generator/Libclang/: Libclang.csproj  Statistics.cs
src/generator/Libclang.Core/: Libclang.Core.csproj  RecordField.cs
src/generator/Libclang.DocsetParser/: Libclang.DocsetParser.csproj
src/generator/Libclang.Tests/: FrameworkParserTests.cs  Libclang.Tests.csproj
src/generator/MetadataGenerator/: MetadataGenerator.csproj  Program.cs  Statistics.cs
src/generator/MetadataGenerator.Core/: ClassDiagram.cd  MetadataGenerator.Core.csproj  RecordField.cs  TypeEncoding.cs  TypeEncodingTransfomation.cs  packages.config
src/generator/MetadataGenerator.DocsetParser/: DocsetParser.cs  MetadataGenerator.DocsetParser.csproj  TokenMetadata.cs
src/generator/MetadataGenerator.Tests/: FrameworkParserTests.cs  LibclangHelper.cs  MetadataGenerator.Tests.csproj
src/generator/TypeScript.Builder/: CollectionExtensions.cs  EnumerableExtensions.cs  Flags.cs  SourceTrackingDocumentationProvider.cs  TypeScript.Factory.csproj  TypeScriptFactory.TypeTransformation.cs  (+1 more)
src/merger/: CMakeLists.txt
(+582 files in other folders)
